k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: nagp-app
  labels:
    app: service-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: service-api
