k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: nagp-app
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres
  type: ClusterIP
